fix: inline code readability

--- a/src/templates/style.css
+++ b/src/templates/style.css
@@ -35,3 +35,4 @@ img { margin-left: auto; margin-right: auto; display: block; max-width:100%; max
 table, th, td { border: 1px solid; }
 table { border-collapse: collapse; padding: 0.1em; margin: 0px auto; }
 th, td { padding: 0.1em 0.5em; }
+code:not(pre code) { font-family: 'Ubuntu Mono', 'Consolas', 'Monaco', monospace; background: var(--current-line); padding: 2px; }
